--- a/www/css/pomodoro.css
+++ b/www/css/pomodoro.css
@@ -29,7 +29,7 @@
     position: relative;
     height:100%;
     width: 50%;
-    background-color: lightgreen;
+    background-color: whitesmoke;
 }
 
 .pomButtonShow {
